force-app/main/default/objects/PDRI__VCS_Pull_Request__c/PDRI__VCS_Pull_Request__c.object-meta.xml
<CustomObject>
    <label>VCS Pull Request</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>VCS Pull Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VCS Pull Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>