force-app/main/default/objects/PDRI__VCS_Pull_Request__c/fields/PDRI__Pull_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Pull_Request_Id__c</fullName>
    <label>Pull Request Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>