force-app/main/default/objects/PDRI__VCS_Pull_Request__c/fields/PDRI__Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Repository_URL__c</fullName>
    <label>Repository URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>