force-app/main/default/objects/PDRI__VCS_Pull_Request__c/fields/PDRI__SourceName__c.field-meta.xml
<CustomField>
    <fullName>PDRI__SourceName__c</fullName>
    <label>Source Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>