force-app/main/default/objects/PDRI__VCS_Pull_Request__c/fields/PDRI__TargetName__c.field-meta.xml
<CustomField>
    <fullName>PDRI__TargetName__c</fullName>
    <label>Target Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>