force-app/main/default/objects/PDRI__VCS_Pull_Request__c/fields/PDRI__Title__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>